# platform.core.telephony.libcall-manager

./: CMakeLists.txt  callmgr_client.pc.in  libcall-manager.manifest  project.config
doc/: call_manager_doc.h
include/: call-manager-common.h  call-manager-extension.h  call-manager-product.h  call-manager.h
packaging/: libcall-manager.spec
src/: call-manager-product.c  call-manager.c
test/: CMakeLists.txt  test.c
